:rocket: Envia a section 'services'

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,12 +1,122 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Gomes Chaveiro</title>
 </head>
 <body>
+    <header>
+        <section>
+            <span>Serviço de  chaveiro em <strong>Paulista, PE</strong></span>
+            <span>NÚMERO DE EMERGÊNCIA <strong>(81) 99844-0719</strong></span>
+        </section>
+    </header>
+
+    <main>
+        <section class="card">
+            <div class="content">
+                <a class="logo" href="/">
+                    <img src="assets/gomes-chaveiro.svg" alt="Logo Gomes Chaveiro"/>
+                </a>
+                <h2>Ficou <span class="highlight">trancado fora</span> da sua casa, carro ou apartamento?</h2>
+                <p>Solicite o <span class="highlight">serviço de chaveiro</span> agora mesmo!</p>
+            </div>
+            <form action="">
+                <div class="input-data">
+                    <label for="name">Nome</label>                        
+                    <input type="text" name="name" id="name" required autocomplete="off">
+                </div>
+                <div class="input-data">
+                    <label for="cell">Celular</label>
+                    <input type="text" name="cell" id="cell" required  autocomplete="off">
+                </div>
+                <div class="input-data">
+                    <label for="email">E-mail</label>
+                    <input type="text" name="email" id="email" autocomplete="off">
+                </div>
+                <div class="input-data">
+                    <label for="message">Descreva seu problema</label>
+                    <textarea name="text" id="message" required rows="4" autocomplete="off"></textarea>
+                </div>
+                
+                <button type="submit" id="submit">Solicitar serviço</button>
+            </form>
+        </section>
+
+        <section class="services">
+            <div class="card-whatsapp">
+                <p>OU ENTRE EM CONTATO PELO WHATSAPP</p>
+                <h2>(81) 99844-0719</h2>
+            </div>
+
+            <h1>Nós prestamos os seguintes serviços:</h1>
+            <div class="cards-services">
+                <div class="card-service">
+                    <img src="assets/chave-casa.svg" alt="Chave comum">
+                    <h4>Chave comum e tetra</h4>
+                    <p>Cópias de chave comum e tetra</p>
+                </div>
+                <div class="card-service">
+                    <img src="assets/chave-casa.svg" alt="Chave comum">
+                    <h4>Chave comum e tetra</h4>
+                    <p>Cópias de chave comum e tetra</p>
+                </div>
+                <div class="card-service">
+                    <img src="assets/chave-casa.svg" alt="Chave comum">
+                    <h4>Chave comum e tetra</h4>
+                    <p>Cópias de chave comum e tetra</p>
+                </div>
+                <div class="card-service">
+                    <img src="assets/chave-casa.svg" alt="Chave comum">
+                    <h4>Chave comum e tetra</h4>
+                    <p>Cópias de chave comum e tetra</p>
+                </div>
+                <div class="card-service">
+                    <img src="assets/chave-casa.svg" alt="Chave comum">
+                    <h4>Chave comum e tetra</h4>
+                    <p>Cópias de chave comum e tetra</p>
+                </div>
+                <div class="card-service">
+                    <img src="assets/chave-casa.svg" alt="Chave comum">
+                    <h4>Chave comum e tetra</h4>
+                    <p>Cópias de chave comum e tetra</p>
+                </div>
+                <div class="card-service">
+                    <img src="assets/chave-casa.svg" alt="Chave comum">
+                    <h4>Chave comum e tetra</h4>
+                    <p>Cópias de chave comum e tetra</p>
+                </div>
+                <div class="card-service">
+                    <img src="assets/chave-casa.svg" alt="Chave comum">
+                    <h4>Chave comum e tetra</h4>
+                    <p>Cópias de chave comum e tetra</p>
+                </div>
+                <div class="card-service">
+                    <img src="assets/chave-casa.svg" alt="Chave comum">
+                    <h4>Chave comum e tetra</h4>
+                    <p>Cópias de chave comum e tetra</p>
+                </div>
+            </div>
+            
+            <section class="credit-cards">
+                <img src="assets/visa.svg" alt="Logo Visa">
+                <img src="assets/mastercard.svg" alt="Logo Mastercard">
+                <img src="assets/hipercard.svg" alt="Logo Hipercard">
+                <img src="assets/diners.svg" alt="Logo Diners Club">
+                <img src="assets/elo.svg" alt="Logo Elo">
+            </section>
+    
+    </section>
+
+        
+    </main>
     
 </body>
 </html>
