--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -105,6 +105,12 @@ form {
     text-transform: uppercase;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 .input-data {
     display: inline-block;
 }
@@ -131,7 +137,7 @@ input#name {
     width: 24.5rem;
 }
 
-input#cell {
+input#phone {
     width: 15rem;
     margin-left: 2rem;
 }
@@ -151,6 +157,9 @@ textarea {
 /*   BUTTON   */
 button#submit,
 button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 42rem;
     height: 5rem;
     margin-bottom: 0rem;
@@ -165,6 +174,12 @@ button {
     cursor: pointer;
 }
 
+button:hover,
+button#submit:hover {
+    background: rgb(233, 118, 37);
+    transition: 300ms;
+}
+
 a:link {
     color: var(--white);
     text-decoration: none;
@@ -174,24 +189,24 @@ a:visited {
     color: var(--white);
 }
 
+/*  SPINNER  */
+.spinner {
+    display: none;
+    width: 2rem;
+    height: 2rem;
+    margin-left: 1rem;
 
-/*  SERVICES  */
-.services {
-    background: rgba(169, 185, 217, 0.1);
-    padding-bottom: 3rem;
+    border: .4rem solid rgba(255, 255, 255, 0.4);
+    border-radius: 50%;
+    border-left-color: var(--white);
+
+    animation: spin 1s linear infinite;
 }
 
-h1 {
-    margin-top: 10rem;
-    font-weight: 700;
-    font-size: 3.2rem;
-    text-align: center;
-    color: var(--orange);
-}
-
-.highlight-text {
-    font-weight: 700;
-    font-style: italic;
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 /*  CARD WHATSTAPP  */
@@ -216,6 +231,30 @@ h1 {
     color: var(--white);
 
     cursor: pointer;
+}
+
+.card-whatsapp a:hover {
+    color: var(--orange);
+    transition: 300ms;
+}
+
+/*  SERVICES  */
+.services {
+    background: rgba(169, 185, 217, 0.1);
+    padding-bottom: 3rem;
+}
+
+h1 {
+    margin-top: 10rem;
+    font-weight: 700;
+    font-size: 3.2rem;
+    text-align: center;
+    color: var(--orange);
+}
+
+.highlight-text {
+    font-weight: 700;
+    font-style: italic;
 }
 
 /*  CARDS SERVICES  */
@@ -282,10 +321,13 @@ h1 {
 .credit-cards img {
     margin: 3.5rem;
 }
+.credit-cards img:hover {
+    transition: 300ms;
+    transform: scale(1.2);
+}
 
 /*  LOYALTY PROGRAMME  */
 .card-loyalty {
-    position: relative;
     margin-top: 4rem;
     margin-bottom: 4rem;
     float: left;
@@ -293,6 +335,7 @@ h1 {
     width: 45rem;
     background: rgba(169, 185, 217, 0.1);
     overflow: hidden;
+    box-shadow: .2rem .2rem .5rem rgba(0, 0, 0, 0.1);
 }
 
 .card-loyalty#copy {
@@ -303,6 +346,11 @@ h1 {
     height: 20rem;
     width: 20rem;
     margin: -1rem 26rem;
+}
+
+.card-loyalty:hover {
+    transition: 300ms;
+    transform: scale(1.04);
 }
 
 .card-loyalty#copy img {
@@ -323,18 +371,20 @@ h1 {
     color: var(--blue);
 }
 
-.conditions h3 {
+.conditions {
     position: absolute;
     height: 10rem;
     width: 45rem;
     margin-top: 1rem;
-    background: var(--blue);
+    background: var(--orange);
+}
 
+.conditions h3 {
     font-size: 3.2rem;
     font-weight: 400;
     text-align: center;
     padding-top: 2.5rem;
-    color: var(--white);
+    color: var(--white);    
 }
 
 /*  REVIEWS  */
@@ -343,22 +393,19 @@ h1 {
     height: 17.5rem;
     width: 100%;
     margin-top: 4rem;
+    background: #a9b9d91a;
     align-items: center;
     justify-content: center;
 
     background: rgba(169, 185, 217, 0.1);
 }
 
-.review {
-    display: none;
-    float: right;
+.reviews:hover {
+    background: rgba(169, 185, 217, 0.2);
+    transition: 300ms;
 }
 
-.review:target{
-    display: block;
-}
-
-.reviews p {
+.review p {
     display: block;
     font-weight: 300;
     font-style: italic;
@@ -368,20 +415,22 @@ h1 {
 }
 
 .navigation {
-    position: relative;
-    width: 94rem;
-    display: flex;
-    margin-top: 5rem;
-    justify-content: center;
+    margin-top: 10rem;
+    position: absolute;
 }
 
-.manual-btn,
-.manual-btn-active {
+.manual-btn {
+    display: inline-block;
     background: var(--light-blue);
     padding: 5px;
     border-radius: 10px;
     cursor: pointer;
-    transition: 2s;
+    transition: 1s;
+}
+
+.manual-btn:hover,
+.manual-btn.active {
+    background: var(--blue);
 }
 
 .manual-btn.active {
