--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,7 +17,6 @@ html {
 
     font-size: 62.5%;
     scroll-behavior: smooth;
-
 }
 
 body {
@@ -30,39 +29,38 @@ body {
 }
 
 header {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 5rem;
+    margin: 0 auto;
     background: var(--blue);
+    /* box-shadow: 0rem .4rem .4rem rgba(0, 0, 0, 0.2); */
+}
+
+.header-container {
+    display: flex;
+    width: 100%;
+    max-width: 940px;
+    margin: 0 auto;
+    justify-content: space-between;
+    padding: 1.3rem 1rem;
+    
     font-size: 1.6rem;
     font-weight: 400;
     color: var(--white);
     text-transform: uppercase;
     letter-spacing: .03rem;
-    box-shadow: 0rem .4rem .4rem rgba(0, 0, 0, 0.2);
-}
-
-header section {
-    display: flex;
-    width: 94rem;
-    align-items: center;
-    margin: 0 auto;
-    justify-content: space-between;
-    padding-top: 1.2rem;
 }
 
 main {
-    width: 94rem;
+    width: 100%;
+    max-width: 940px;
     margin: 0 auto;
 }
 
 /*   SEÇÃO INICIAL   */
-section.card {    
-    margin-top: 5rem;
-    background: url('../assets/card-home.png') no-repeat top/contain;
+section.card {
+    background: url('../assets/card-home.png') no-repeat top /*contain*/;
     height: 67rem;
-    width: 94rem;
+    width: 100%;    
+    max-width: 940px;
     color: var(--white);
 }
 
@@ -91,8 +89,7 @@ span.highlight {
 }
 
 /*   FORM   */
-form {
-    /* display: block; */
+form { 
     margin-left: 10rem;
     margin-top: 4rem;
     padding: 4rem;
@@ -105,11 +102,17 @@ form {
     text-transform: uppercase;
 }
 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+input[type=number]::-webkit-inner-spin-button { 
+    -webkit-appearance: none;
+    
 }
+
+input[type=number] { 
+   -moz-appearance: textfield;
+   appearance: textfield;
+
+}
+
 
 .input-data {
     display: inline-block;
@@ -260,12 +263,11 @@ h1 {
 /*  CARDS SERVICES  */
 .services .cards-services {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    /* gap: 4rem 4rem; */
+    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+    gap: 2rem;
 
     margin-top: 4rem;
     padding: 4rem 10rem;
-    width: 100%;
     background: rgba(169, 185, 217, 0.25);
 }
 
@@ -327,11 +329,19 @@ h1 {
 }
 
 /*  LOYALTY PROGRAMME  */
-.card-loyalty {
-    margin-top: 4rem;
-    margin-bottom: 4rem;
-    float: left;
+.loyalty-programme {
+    width: 100%;
+    max-width: 940px;
+}
+
+.cards-loyalty {
     height: 29.5rem;
+    margin-top: 4rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.card-loyalty {
     width: 45rem;
     background: rgba(169, 185, 217, 0.1);
     overflow: hidden;
@@ -342,21 +352,21 @@ h1 {
     margin-left: 4rem;
 }
 
-.card-loyalty img {
+.card-loyalty#sharpening img {
     height: 20rem;
     width: 20rem;
-    margin: -1rem 26rem;
-}
-
-.card-loyalty:hover {
-    transition: 300ms;
-    transform: scale(1.04);
+    margin: -1rem 0rem -1rem 26rem;
 }
 
 .card-loyalty#copy img {
     height: 28rem;
     width: 15rem;
-    margin: -5rem 31rem;
+    margin: -5rem 0rem -5rem 31rem;
+}
+
+.card-loyalty:hover {
+    transition: 300ms;
+    transform: scale(1.04);
 }
 
 .card-loyalty h4 {
@@ -372,9 +382,8 @@ h1 {
 }
 
 .conditions {
-    position: absolute;
     height: 10rem;
-    width: 45rem;
+    max-width: 45rem;
     margin-top: 1rem;
     background: var(--orange);
 }
@@ -392,8 +401,8 @@ h1 {
     display: flex;
     height: 17.5rem;
     width: 100%;
+    max-width: 940px;
     margin-top: 4rem;
-    background: #a9b9d91a;
     align-items: center;
     justify-content: center;
 
@@ -450,23 +459,27 @@ h1 {
 }
 
 .map {
+    display: flex;
     margin-top: 2rem;
+    max-height: 250px;
+    width: 100%;
+    max-width: 940px;
 }
 
 /*  FOOTER  */
 footer {
     display: flex;
     flex-wrap: wrap;
-    background: url('../assets/imagem-footer.png') no-repeat top/contain;
+    background: url('../assets/imagem-footer.png') no-repeat top;
     height: 28.4rem;
-    width: 94rem;
+    width: 100%;
+    max-width: 940px;
     margin: 3rem auto 0rem;
     align-items: center;
 }
 
 footer h1 {
-    width: 94rem;
-    margin-top: 2rem;
+    margin: 2rem auto;
     color: var(--white);
 }
 
@@ -480,27 +493,189 @@ footer p {
     color: var(--light-blue);
 }
 
-footer button {
+footer a {
     margin: 0rem auto 4rem;
 }
 
 .end-footer {
     height: 5rem;
-    width: 100%;    
-
+    width: 100%;
     background: var(--blue);
-    font-size: 1.6rem;
+}
+
+.end-footer section {
+    display: flex;
+    max-width: 94rem;
+    margin: 0 auto;
+    justify-content: center;
+    padding: 1.3rem 1rem;
+
+    font-size: 1.5rem;
     font-weight: 400;
     color: var(--light-blue);
     text-transform: uppercase;
     letter-spacing: .03rem;
 }
 
-.end-footer section {
-    display: flex;
-    align-items: center;
-    margin: 0 auto;
-    justify-content: space-between;
-    padding-top: 1.2rem;
-    width: 94rem;
+@media (max-width: 768px) {
+    html {
+        font-size: 50%;
+    }
+
+    .loyalty-programme,
+    .location {
+        width: 95%;
+        margin: 0 auto;
+    }
+
+    .reviews {
+        width: 95%;
+        margin: 4rem auto 0rem;
+    }
+}
+
+@media (max-width: 425px) {
+    .header-container span:last-child {
+        display: none;
+    }
+
+    .header-container span {
+        margin: 0 auto;
+    }
+
+    section.card {
+        height: 670px;
+    }
+
+    section.card .content a.logo {
+        display: flex;
+        justify-content: center;
+        margin: 0rem 10rem 4rem 10rem;
+        padding-top: 4rem;
+        fill: var(--white);
+    }
+    
+    section.card .content h2 {
+        margin: 0 auto;
+        max-width: 400px;
+        font-size: 3rem;
+        line-height: 4rem;
+        text-align: center;
+    }
+    
+    section.card .content p {
+        font-size: 2rem;
+        margin: 1rem auto 0rem;
+        text-align: center;
+        width: 280px;
+    }
+
+    form,
+    .card-whatsapp {
+        display: block;
+        margin: 4rem auto 10rem;
+        width: 360px;
+        padding: 4rem 5rem;
+    }
+
+    form {
+        margin: 4rem auto 0rem;
+        height: 100%;
+    }
+    
+    .card-whatsapp {
+        margin-top: 0;
+        padding: 10px;
+        height: 110px;
+    }
+    .card-whatsapp p {
+        margin-bottom: 1rem;
+    }
+
+    input,
+    textarea,
+    label {
+        margin: 0 auto 1rem !important;
+        width: 280px !important;
+        font-size: 2rem;
+    }
+
+    input,
+    label {
+        height: 40px;
+    }
+    
+    button#submit, button {
+        width: 280px;
+        margin: 0 auto;
+    }
+
+    .services .cards-services {
+        margin: 4rem 0rem;
+        padding: 4rem 0rem;
+    }
+
+    .services h1 {
+        width: 370px;
+        margin: 0 auto;
+    }
+
+    .card-service {
+        min-height: 80px;
+        width: 320px;
+        margin: 0 auto;
+    }
+
+    .card-service img {
+        width: 55px;
+        margin-right: 10px;
+    }
+
+    .card-service h4 {
+        font-size: 2rem;
+    }
+    
+    .card-service p {
+        font-size: 1.6rem;
+    }
+    
+    .credit-cards {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        max-width: 380px;
+    }
+
+    .credit-cards img {
+        margin: 15px;
+        min-width: 30px;
+    }
+
+    .loyalty-programme {
+        height: 614px;
+    }
+
+    .cards-loyalty {
+        display: block;
+        max-width: 360px;
+        margin: 4rem auto;
+    }
+
+    .card-loyalty#copy {
+        margin: 4rem auto 0rem;
+    }
+
+    .reviews {
+        width: 100%;
+    }
+
+    .review p {
+        width: 80%;
+        margin: 0rem auto 2rem;
+        font-size: 2rem;
+    }
+
+    .location {
+        max-width: 380px;
+    }
 }
