--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,14 +10,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,300;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="shortcut icon" href="assets/favicon.svg">
     <link rel="stylesheet" href="css/styles.css">
     <title>Gomes Chaveiro</title>
 </head>
+
 <body>
     <header>
-        <section>
-            <span>Serviço de  chaveiro em <strong><a href="#location">Paulista, PE</a></strong></span>
-            <span>NÚMERO DE EMERGÊNCIA <strong><a href="tel:5581998440719">(81) 99844-0719</a></strong></span>
+        <section class="header-container">
+            <span>
+                Serviço de chaveiro em <strong><a href="#location">Paulista, PE</a></strong>
+            </span>
+            <span>
+                NÚMERO DE EMERGÊNCIA <strong><a href="tel:5581998440719">(81) 99844-0719</a></strong>
+            </span>
         </section>
     </header>
 
@@ -24,19 +31,19 @@
         <section class="card">
             <div class="content">
                 <a class="logo" href="/">
-                    <img src="assets/gomes-chaveiro.svg" alt="Logo Gomes Chaveiro"/>
+                    <img src="assets/gomes-chaveiro.svg" alt="Logo Gomes Chaveiro" />
                 </a>
                 <h2>Ficou <span class="highlight">trancado fora</span> da sua casa, carro ou apartamento?</h2>
                 <p>Solicite o <span class="highlight">serviço de chaveiro</span> agora mesmo!</p>
             </div>
             <form id="form">
                 <div class="input-data">
-                    <label for="name">Nome</label>                        
+                    <label for="name">Nome</label>
                     <input type="text" name="name" id="name" required autocomplete="off">
                 </div>
                 <div class="input-data">
                     <label for="phone">Telefone</label>
-                    <input type="number" name="phone" id="phone" required  autocomplete="off">
+                    <input type="number" name="phone" id="phone" required autocomplete="off">
                 </div>
                 <div class="input-data">
                     <label for="email">E-mail</label>
@@ -46,29 +53,33 @@
                     <label for="message">Descreva seu problema</label>
                     <textarea name="text" id="message" required rows="4" autocomplete="off"></textarea>
                 </div>
-                
+
                 <button type="submit" id="submit">Solicitar serviço <div class="spinner"></div></button>
             </form>
         </section>
 
         <section class="services">
             <div class="card-whatsapp">
-                <p>OU ENTRE EM CONTATO PELO WHATSAPP</p>
+                <p>OU FALE PELO WHATSAPP</p>
                 <h2><a href="https://wa.me/5581998440719?text=Olá%20" target="_blank">(81) 99844-0719</a></h2>
             </div>
 
             <h1>Nós prestamos os seguintes serviços:</h1>
             <div class="cards-services">
-                <% services.forEach(service => { %> 
-                    
+                <% services.forEach(service => { %>
+
                     <div class="card-service">
                         <img src="assets/<%= service.icon %>.svg" alt="<%= service.name %>">
-                        <h4><%= service.name %></h4>
-                        <p><%= service.description %></p>
+                        <h4>
+                            <%= service.name %>
+                        </h4>
+                        <p>
+                            <%= service.description %>
+                        </p>
                     </div>
-                <% }) %>
+                    <% }) %>
             </div>
-            
+
             <section class="credit-cards">
                 <img src="assets/visa.svg" alt="Logo Visa">
                 <img src="assets/mastercard.svg" alt="Logo Mastercard">
@@ -76,79 +87,79 @@
                 <img src="assets/diners.svg" alt="Logo Diners Club">
                 <img src="assets/elo.svg" alt="Logo Elo">
             </section>
-    
-    </section>
 
-    <section class="loyalty-programme">
-        <h1>Já conhece nosso programa <span class="highlight-text">Cliente Fidelidade?</span></h1>
-        <section class="card-loyalty" id="sharpening">
-            <h4>Faça 6 afiações e ganhe 1 grátis!</h4>
-            <img src="../assets/alicate-fidelidade.svg" alt="Ícone de alicate de unha">
-            <div class="conditions">
-                <h3>6 afiações = 1 grátis</h3>
-            </div>
-        </section>
-        <section class="card-loyalty" id="copy">
-            <h4>Faça 6 cópias e ganhe 1 grátis!</h4>
-            <img src="../assets/chave-fidelidade.svg" alt="Ícone de uma chave">
-            <div class="conditions">
-                <h3>6 cópias = 1 grátis</h3>
-            </div>
         </section>
 
-    </section>
+        <section class="loyalty-programme">
+            <h1>Já conhece nosso programa <span class="highlight-text">Cliente Fidelidade?</span></h1>
+            <div class="cards-loyalty">
+                <section class="card-loyalty" id="sharpening">
+                    <h4>Faça 6 afiações e ganhe 1 grátis!</h4>
+                    <img src="../assets/alicate-fidelidade.svg" alt="Ícone de alicate de unha">
+                    <div class="conditions">
+                        <h3>6 afiações = 1 grátis</h3>
+                    </div>
+                </section>
+                <section class="card-loyalty" id="copy">
+                    <h4>Faça 6 cópias e ganhe 1 grátis!</h4>
+                    <img src="../assets/chave-fidelidade.svg" alt="Ícone de uma chave">
+                    <div class="conditions">
+                        <h3>6 cópias = 1 grátis</h3>
+                    </div>
+                </section>
+            </div>
 
-    <section class="reviews">
-        <div class="review">
-            <p>"Meus alicates ficaram excelentes! Muito bem amolados. Ameiii"</p>
-        </div>
-        <div class="review">
-            <p>"Serviço de qualidade! Um excelente profissional, educado e atencioso."</p>
-        </div>
-        <div class="review">
-            <p>"Terceiro comentário."</p>
-        </div>
+        </section>
 
-        <div class="navigation">
-            <span class="manual-btn" onclick="currentSlide(1)"></span>
-            <span class="manual-btn" onclick="currentSlide(2)"></span>
-            <span class="manual-btn" onclick="currentSlide(3)"></span>
-        </div>
-        
-    </section>
-        
-    <section class="location" id="location">
-        <h1>Av. B, 75 – Maranguape II Paulista, PE – CEP 53421-021</h1>
-        <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3136.4168647127126!2d-34.86039258006557!3d-7.9328847655436805!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3f3475fed7f2674f!2sGOMES%20CHAVEIRO!5e0!3m2!1spt-BR!2sbr!4v1627304938673!5m2!1spt-BR!2sbr"
-                width="940" height="250" style="border:0;" allowfullscreen="" loading="lazy">
-            </iframe>
-        </div>
-    </section>
+        <section class="reviews">
+            <% reviews.forEach(review => { %>
+               <div class="review">
+                <p>"<%= review.review %>"</p>
+            </div> 
+            <% }) %>
+
+            <div class="navigation">
+                <% reviews.forEach(review => { %>
+                    <span class="manual-btn" onclick="currentSlide('<%= review.id %>')"></span>
+                <% }) %>
+            </div>
+
+        </section>
+
+        <section class="location" id="location">
+            <h1>Av. B, 75 – Maranguape II Paulista, PE – CEP 53421-021</h1>
+            <div class="map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3136.4168647127126!2d-34.86039258006557!3d-7.9328847655436805!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3f3475fed7f2674f!2sGOMES%20CHAVEIRO!5e0!3m2!1spt-BR!2sbr!4v1627304938673!5m2!1spt-BR!2sbr"
+                    width="940" height="250" style="border:0;" allowfullscreen="" loading="lazy">
+                </iframe>
+            </div>
+        </section>
     </main>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <a href="https://wa.me/5581998440719?text=Olá%20" style="position:fixed;width:60px;height:60px;bottom:40px;right:40px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:30px; z-index:1000;" target="_blank">
+    <a href="https://wa.me/5581998440719?text=Olá%20"
+        style="position:fixed;width:60px;height:60px;bottom:40px;right:40px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:30px; z-index:1000;"
+        target="_blank">
         <i style="margin-top:16px" class="fa fa-whatsapp"></i>
     </a>
 
     <footer>
         <h1>Receba nossa ajuda!</h1>
         <p>Solicite o serviço de chaveiro agora mesmo!</p>
-        <button type="text">
-            <a href="#form">Solicitar serviço</a>
-        </button>
+        <a href="#form">
+            <button type="text">Solicitar serviço</button>
+        </a>
     </footer>
 
     <div class="end-footer">
         <section>
             <span>2021 GOMES CHAVEIRO – Todos os direitos reservados.</strong></span>
-            <span>NÚMERO DE EMERGÊNCIA <strong><a href="tel:5581998440719"><span class="highlight">(81) 99844-0719</span></a></strong></span>
         </section>
     </div>
 
     <script src="js/app.js"></script>
     <script src="js/reviews.js"></script>
-    
+
 </body>
 </html>
