--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -36,7 +36,7 @@
                 <h2>Ficou <span class="highlight">trancado fora</span> da sua casa, carro ou apartamento?</h2>
                 <p>Solicite o <span class="highlight">serviço de chaveiro</span> agora mesmo!</p>
             </div>
-            <form id="form">
+            <form id="form" method="POST">
                 <div class="input-data">
                     <label for="name">Nome</label>
                     <input type="text" name="name" id="name" required autocomplete="off">
